Fixed contrast issues. Added user's ability to login, see their pfp, view account info, logout

--- a/public/styles/shared.css
+++ b/public/styles/shared.css
@@ -28,3 +28,35 @@ footer{
     background-color: dimgray;
     color: white;
 }
+.btn-outline-success {
+    color: white;
+    border-color: white;
+}
+.btn-primary {
+    background-color: #0070f4;
+}
+.fav-movie-card {
+    height: fit-content;
+    background-color: #161616;
+    h2 {
+        font-size: 2rem;
+    }
+    p {
+        font-size: 1rem;
+    }
+    .row {
+        height: 100%;
+        [class^="col"]{
+            height: 100%;
+        }
+    }
+}
+.deco-star-rating {
+    font-size: 2rem;
+    color: gold;
+    display: flex;
+    justify-content: end;
+    .unchecked {
+        color: grey;
+    }
+}
